--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7f7f7+7,ffffff+43,ffffff+52,ffffff+62,f7f7f7+91 */
+background: rgb(247,247,247); /* Old browsers */
+background: -moz-linear-gradient(left, rgba(247,247,247,1) 7%, rgba(255,255,255,1) 43%, rgba(255,255,255,1) 52%, rgba(255,255,255,1) 62%, rgba(247,247,247,1) 91%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left, rgba(247,247,247,1) 7%,rgba(255,255,255,1) 43%,rgba(255,255,255,1) 52%,rgba(255,255,255,1) 62%,rgba(247,247,247,1) 91%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, rgba(247,247,247,1) 7%,rgba(255,255,255,1) 43%,rgba(255,255,255,1) 52%,rgba(255,255,255,1) 62%,rgba(247,247,247,1) 91%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#f7f7f7',GradientType=1 ); /* IE6-9 */
 }
